[package]
name = "avtor-core"
version = "0.1.0"
authors = ["decapo01"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde","v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.10"
validator_derive = "0.10"